--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,7 +425,7 @@ h6 {
   background-size: cover;
 }
 
-#hero:before {
+/* #hero:before {
   content: "";
   background: rgba(127, 127, 127, 0.587);
   position: absolute;
@@ -433,7 +433,7 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
-}
+} */
 
 #hero .container {
   padding-top: 70px;
@@ -488,7 +488,7 @@ h6 {
 @media (max-width: 992px) {
   #hero:before {
     content: "";
-    background: rgba(127, 127, 127, 0.587);
+    
     position: absolute;
     bottom: 0;
     top: 0;
