--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,7 +421,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/header-img.jpg") top right;
   background-size: cover;
 }
 
@@ -455,7 +455,7 @@ h6 {
 }
 
 #hero h2 {
-  color: #d2d2d2;
+  color: #6f6f6f;
   margin: 10px 0 0 0;
   font-size: 22px;
 }
